--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  margin: 20px;
+  margin: 0 20px 0 20px;
 }
 
 .review-txt,
@@ -123,4 +123,15 @@
 
 .review-show-txt {
   font-size: 16px;
+}
+
+.reg-center,
+.profile-center {
+  width: 80%;
+  border: 1px solid green;
+  min-height: 500px;
+}
+
+.reg-form {
+  margin: 10px;
 }
